cleaned up output files

--- a/notebooks/Perform analysis on census and GFM data.ipynb
+++ b/notebooks/Perform analysis on census and GFM data.ipynb
@@ -2674,66 +2674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>sum_sq</th>\n",
-       "      <th>df</th>\n",
-       "      <th>F</th>\n",
-       "      <th>PR(&gt;F)</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2.575291e+10</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>191.260645</td>\n",
-       "      <td>1.799251e-43</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         sum_sq   df           F        PR(>F)\n",
-       "0  2.575291e+10  1.0  191.260645  1.799251e-43"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mc_year.loc[mc_year['outcome']=='raised_amnt',\n",
-    "                                  ['sum_sq', 'df', 'F', 'PR(>F)']].dropna()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -2797,7 +2738,7 @@
        "      <td>7327.058766</td>\n",
        "      <td>$6,667.70 ($7,327.06)</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>143572.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -2907,21 +2848,21 @@
        "2018  38837  6004.437057  11998.869148  $6,004.44 ($11,998.87)           NaN   \n",
        "2019  22725  5070.106315   9517.555158   $5,070.11 ($9,517.56)           NaN   \n",
        "\n",
-       "       df           F        PR(>F)  \n",
-       "year                                 \n",
-       "2010  1.0  191.260645  1.799251e-43  \n",
-       "2011  NaN         NaN           NaN  \n",
-       "2012  NaN         NaN           NaN  \n",
-       "2013  NaN         NaN           NaN  \n",
-       "2014  NaN         NaN           NaN  \n",
-       "2015  NaN         NaN           NaN  \n",
-       "2016  NaN         NaN           NaN  \n",
-       "2017  NaN         NaN           NaN  \n",
-       "2018  NaN         NaN           NaN  \n",
-       "2019  NaN         NaN           NaN  "
+       "            df           F        PR(>F)  \n",
+       "year                                      \n",
+       "2010       1.0  191.260645  1.799251e-43  \n",
+       "2011  143572.0         NaN           NaN  \n",
+       "2012       NaN         NaN           NaN  \n",
+       "2013       NaN         NaN           NaN  \n",
+       "2014       NaN         NaN           NaN  \n",
+       "2015       NaN         NaN           NaN  \n",
+       "2016       NaN         NaN           NaN  \n",
+       "2017       NaN         NaN           NaN  \n",
+       "2018       NaN         NaN           NaN  \n",
+       "2019       NaN         NaN           NaN  "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2938,19 +2879,20 @@
     "#Add ANOVA results to summary dataframe\n",
     "for c in raised_amnt_anova_yr.columns:\n",
     "    raised_amount_year_info.loc[2010, c] = raised_amnt_anova_yr.loc[0, c]\n",
-    "    \n",
+    "\n",
+    "raised_amount_year_info.loc[2011, 'df'] = len(df['raised_amnt'].dropna())\n",
+    "\n",
     "raised_amount_year_info\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
     "if save:\n",
-    "    raised_amount_year_info.to_csv(data_io.output_analysis/'raised_amnt_by_year_desc.csv',\n",
-    "                                  index = False)\n"
+    "    raised_amount_year_info.to_csv(data_io.output_analysis/'raised_amnt_by_year_desc.csv')\n"
    ]
   },
   {
@@ -2961,7 +2903,7 @@
    "source": [
     "#save results of ANOVA w post-hoc tests\n",
     "if save:\n",
-    "    mc_year.to_csv(data_io.output_analysis/'anovas_by_campaign_year.csv', index=False)"
+    "    mc_year.to_csv(data_io.output_analysis/'anovas_by_campaign_year.csv')"
    ]
   },
   {
