reorganized the notebooks

--- a/notebooks/Assign location FIPs and text indicators.ipynb
+++ b/notebooks/Assign location FIPs and text indicators.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,35 +12,137 @@
     "import data_io\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import regex as re"
+    "import re"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "14254\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>location</th>\n",
+       "      <th>county_name</th>\n",
+       "      <th>state</th>\n",
+       "      <th>state_fips</th>\n",
+       "      <th>county_fips</th>\n",
+       "      <th>state_county_fips_str</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>el dorado, ks</td>\n",
+       "      <td>Butler</td>\n",
+       "      <td>KS</td>\n",
+       "      <td>20</td>\n",
+       "      <td>15</td>\n",
+       "      <td>20015</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>new rochelle, ny</td>\n",
+       "      <td>Westchester</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>36</td>\n",
+       "      <td>119</td>\n",
+       "      <td>36119</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>columbia, pa</td>\n",
+       "      <td>Lancaster</td>\n",
+       "      <td>PA</td>\n",
+       "      <td>42</td>\n",
+       "      <td>71</td>\n",
+       "      <td>42071</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>forest hill, md</td>\n",
+       "      <td>Harford</td>\n",
+       "      <td>MD</td>\n",
+       "      <td>24</td>\n",
+       "      <td>25</td>\n",
+       "      <td>24025</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>mount dora, fl</td>\n",
+       "      <td>Lake</td>\n",
+       "      <td>FL</td>\n",
+       "      <td>12</td>\n",
+       "      <td>69</td>\n",
+       "      <td>12069</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           location  county_name state  state_fips  county_fips  \\\n",
+       "0     el dorado, ks       Butler    KS          20           15   \n",
+       "1  new rochelle, ny  Westchester    NY          36          119   \n",
+       "2      columbia, pa    Lancaster    PA          42           71   \n",
+       "3   forest hill, md      Harford    MD          24           25   \n",
+       "4    mount dora, fl         Lake    FL          12           69   \n",
+       "\n",
+       "  state_county_fips_str  \n",
+       "0                 20015  \n",
+       "1                 36119  \n",
+       "2                 42071  \n",
+       "3                 24025  \n",
+       "4                 12069  "
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "unique_locations = pd.read_excel(data_io.input_cleaned/'geolocations'/'cancer_unique_locs_w_fips_mapbox.xlsx',\n",
-    "                                    encoding='utf-8')"
+    "unique_locations = pd.read_csv(data_io.input_cleaned/'geolocations'/'unique_locations_w_fips.csv',\n",
+    "                                    encoding='utf-8',\n",
+    "                              dtype={'state_county_fips_str':'str'})\n",
+    "print(len(unique_locations))\n",
+    "unique_locations.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "len(unique_locations)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.read_excel(data_io.input_cleaned/'cancer_campaigns_no_locs.xlsx')"
+    "df = pd.read_csv(data_io.input_cleaned/'gfm'/'US_cancer_campaigns_2018_2021.csv',index_col=[0],\n",
+    "                 sep='|',encoding='utf-8')"
    ]
   },
   {
@@ -55,32 +157,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "#drop locations that didn't geocode\n",
-    "unique_locations.loc[unique_locations['county']=='none', 'county'] = np.nan\n",
-    "unique_locations.loc[unique_locations['county_fips']=='nan', 'county_fips'] = np.nan\n",
+    "unique_locations = unique_locations.replace('nan',np.nan).replace('none',np.nan)\n",
+    "unique_locations.dropna(subset=['county_name'], inplace=True)\n",
     "\n",
-    "unique_locations.dropna(subset=['county'], inplace=True)\n",
-    "locations = unique_locations['location'].to_list()\n",
+    "county_dict = dict(zip(unique_locations['location'].to_list(), unique_locations['county_name'].to_list()))\n",
+    "fips_dict = dict(zip(unique_locations['location'].to_list(), unique_locations['county_fips'].to_list()))\n",
+    "long_fips_dict = dict(zip(unique_locations['location'].to_list(), \n",
+    "                          unique_locations['state_county_fips_str'].to_list()))\n",
     "\n",
-    "county_dict = dict(zip(locations, unique_locations['county'].to_list()))\n",
-    "fips_dict = dict(zip(locations, unique_locations['county_fips'].to_list()))\n",
     "\n",
-    "\n",
-    "df['county'] = df['location'].map(county_dict)\n",
-    "df['county_fips'] = df['location'].map(fips_dict)"
+    "cleaned_location_city = df['location_city'].str.lower().str.strip()\n",
+    "df['location_county'] = cleaned_location_city.map(county_dict)\n",
+    "df['location_county_fip'] = cleaned_location_city.map(fips_dict)\n",
+    "df['location_state_county_fip'] = cleaned_location_city.map(long_fips_dict)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2394, 3)\n"
+     ]
+    }
+   ],
    "source": [
-    "df['county'].isnull().sum()"
+    "unique_locs_to_scrape = df.loc[df.location_state_county_fip.isna(),\n",
+    "                               ['location_city','location_city_only','location_stateprefix']].drop_duplicates()\n",
+    "print(unique_locs_to_scrape.shape)\n",
+    "unique_locs_to_scrape.to_csv(data_io.input_cleaned/'geolocations'/'unique_locations_to_scrape.csv')"
    ]
   },
   {
@@ -110,12 +224,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "#functions for additional text mining\n",
-    "SEARCH_OPTIONS = pd.read_csv(data_io.input_cleaned/'gfm'/'free_text_search_terms.csv')\n",
+    "SEARCH_OPTIONS = pd.read_csv(data_io.gfm/'gfm'/'free_text_search_terms.csv')\n",
     "\n",
     "SEARCH_DICT = {'cancer_type': SEARCH_OPTIONS['cancer_type'].dropna().to_list(),\n",
     "              'insurance_type': SEARCH_OPTIONS['insurance_type'].dropna().to_list(),\n",
@@ -142,7 +256,7 @@
     "INSURE_DICT = create_dict('insurance_type')\n",
     "#OOP_DICT = create_dict('oop_type')\n",
     "import string   \n",
-    "import regex as re\n",
+    "#import regex as re\n",
     "def extract_search_term_regex(x, search_type = 'cancer_type', return_context = False,\n",
     "                             find_uninsured = False, collapse_dict = 'none'):\n",
     "    if type(x) == str:\n",
@@ -286,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,9 +416,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "searching for oop_type\n",
+      "extracting oop_type\n",
+      "collapsing oop_type\n",
+      "searching for insurance_type\n",
+      "extracting insurance_type\n",
+      "collapsing insurance_type\n",
+      "searching for tx_type\n",
+      "extracting tx_type\n",
+      "collapsing tx_type\n",
+      "searching for cancer_type\n",
+      "extracting cancer_type\n",
+      "collapsing cancer_type\n",
+      "searching for brave\n",
+      "extracting brave\n",
+      "searching for nice\n",
+      "extracting nice\n",
+      "searching for thank\n",
+      "extracting thank\n",
+      "searching for self_reliance\n",
+      "extracting self_reliance\n",
+      "searching for battle\n",
+      "extracting battle\n"
+     ]
+    }
+   ],
    "source": [
     "recode = True\n",
     "if recode:\n",
@@ -355,10 +498,9 @@
     "                                       axis = 1)\n",
     "    save = True\n",
     "    if save:\n",
-    "        writer = pd.ExcelWriter(data_io.input_cleaned/'gfm'/'cancer_w_locs_and_text_features.xlsx',\n",
-    "                               engine='xlsxwriter', options = EXCEL_OPTIONS)\n",
-    "        df.to_excel(writer, encoding='utf-8', index= False)\n",
-    "        writer.close()"
+    "        df.drop(columns=['story_and_title'],inplace=True)\n",
+    "        df.to_csv(data_io.input_cleaned/'gfm'/'US_cancer_campaigns_2018_2021_with_fips_and_text_features.csv',\n",
+    "                  encoding='utf-8',sep='|')"
    ]
   },
   {
@@ -371,9 +513,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "gfm",
    "language": "python",
-   "name": "python3"
+   "name": "gfm"
   },
   "language_info": {
    "codemirror_mode": {
@@ -385,7 +527,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
