big update with mostly changes to notebooks to workout the kinks

--- a/notebooks/Get census data.ipynb
+++ b/notebooks/Get census data.ipynb
@@ -13,7 +13,7 @@
     "import data_io\n",
     "import utils\n",
     "import requests\n",
-    "import hire_tokens as tokens\n",
+    "import tokens\n",
     "CENSUS_KEY = tokens.CENSUS_KEY"
    ]
   },
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,15 +34,18 @@
     "#Retrieve ACS estimates to calculate NDI in R\n",
     "#First, run this script, then go back to R (clustr.R), run the PCA, \n",
     "#and match with GFM data in census_and_gfm_analysis.ipynb\n",
-    "def get_acs_estimates_5_year(census_key, save):\n",
-    "    \n",
-    "    variable_df = pd.read_csv(data_io.input_cleaned/'census'/'census_variables.csv',\n",
-    "                              encoding='utf-8')\n",
+    "def get_acs_estimates_5_year(census_key, save, acs_year=2019):\n",
+    "    '''Choose appropriate acs_year out of choices available by the cesus API:\n",
+    "    https://www.census.gov/data/developers/data-sets/acs-5year.html'''\n",
+    "\n",
+    "    variable_df = pd.read_csv(\n",
+    "        data_io.gfm/'census'/'census_variables.csv',\n",
+    "        encoding='utf-8')\n",
     "    \n",
     "    variable_df = variable_df.loc[0:len(variable_df)-1, :]\n",
     "    variables = variable_df['variable_call'].to_list()\n",
     "    vars_to_get = ','.join(variables)\n",
-    "    base_request = (\"https://api.census.gov/data/2017/acs/acs5/profile?get=NAME,\"+\n",
+    "    base_request = (f\"https://api.census.gov/data/{acs_year}/acs/acs5/profile?get=NAME,\"+\n",
     "                    vars_to_get+\n",
     "                    \"&for=county:*&in=state:*&key=\")\n",
     "    full_request = base_request + census_key\n",
@@ -58,7 +61,7 @@
     "    df['state_int'] = df['state'].astype(int)\n",
     "    df = df[df['state_int']<=56]\n",
     "    \n",
-    "    income_ineq_req = \"https://api.census.gov/data/2017/acs/acs5?get=NAME,B19083_001E&for=county:*&in=state:*&key=\"\n",
+    "    income_ineq_req = f\"https://api.census.gov/data/{acs_year}/acs/acs5?get=NAME,B19083_001E&for=county:*&in=state:*&key=\"\n",
     "    income_ineq_req = income_ineq_req + census_key\n",
     "    response = requests.get(income_ineq_req)\n",
     "    results = response.json()\n",
@@ -73,11 +76,12 @@
     "                                    all_vars['percent_15k_25k'].astype(float) + all_vars['percent_25k_35k'].astype(float))\n",
     "    \n",
     "    all_vars['state_county_fips_str'] = (all_vars['state'].apply(utils.format_state_fip)+\n",
-    "                                                                 all_vars['county'].apply(utils.format_county_fip))\n",
+    "                                         all_vars['county'].apply(utils.format_county_fip))\n",
     "    \n",
     "    if save:\n",
-    "        all_vars.to_csv(data_io.input_cleaned/'census'/'acs_five_year_est.csv',encoding='utf-8',\n",
-    "                  index=False)\n",
+    "        all_vars.to_csv(\n",
+    "            data_io.gfm/'census'/'acs_five_year_est.csv',encoding='utf-8',\n",
+    "            index=False)\n",
     "    return all_vars\n"
    ]
   },
@@ -90,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
